fixed some issues

--- a/app/pages/index.hbs
+++ b/app/pages/index.hbs
@@ -13,7 +13,7 @@
     {{#if currentUser}}
     <a href="/{{currentUser.details.username}}"
       class="items-center justify-center rounded-full shadow-lg bg-pink-500 px-8 py-3 text-base font-medium text-white hover:bg-pink-600 md:py-4 md:px-10 md:text-lg">
-      Go To Your dashboard
+      Go To Your Dashboard
     </a>
     {{else}}
     <a href="/user/signup"
@@ -50,11 +50,10 @@
   <div class="flex items-center flex-wrap mb-20">
     <div class="w-full md:w-1/2">
       <h4 class="text-3xl text-gray-800 font-bold mb-3">WORK ANYWHERE</h4>
-      <p class="text-gray-600 mb-8">Keep important information at hand - your notes are automatically synced to all your
-        devices.</p>
+      <p class="text-gray-600 mb-8">Keep important information at hand - your notes will be saved automatically on the browser.</p>
     </div>
     <div class="w-full md:w-1/2 shadow-2xl">
-      <img src="/assets/images/kanban-screenshot.png" alt="work anywhere" />
+      <img src="/assets/images/screentshot.png" alt="work anywhere" />
     </div>
   </div>
 
