--- a/app/layouts/default.hbs
+++ b/app/layouts/default.hbs
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <nav class="flex items-center justify-between flex-wrap bg-blue-300 p-6">
+  <nav class="flex items-center justify-between flex-wrap bg-white p-6">
   <div class="flex items-center flex-shrink-0 text-black mr-6">
     <svg class="fill-current h-8 w-8 mr-2" width="54" height="54" viewBox="0 0 54 54" xmlns="http://www.w3.org/2000/svg"><path d="M13.5 22.1c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05zM0 38.3c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05z"/></svg>
     <span class="font-semibold text-xl tracking-tight">E-Note</span>
@@ -17,10 +17,10 @@
 
   <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
     <div class="text-sm lg:flex-grow">
-      <a href="index" class="block mt-4 lg:inline-block lg:mt-0 text-black hover:text-white mr-4">
+      <a href="index" class="block mt-4 lg:inline-block lg:mt-0 text-black hover:text-indigo-500 mr-4">
         Home
       </a>
-      <a href="about" class="block mt-4 lg:inline-block lg:mt-0 text-black hover:text-white mr-4">
+      <a href="about" class="block mt-4 lg:inline-block lg:mt-0 text-black hover:text-indigo-500 mr-4">
         About us
       </a>
 
@@ -29,12 +29,12 @@
 
     <div class="text-sm ">
       {{#if currentUser}}
-      <a href="/user/logout" class="block mt-4 lg:inline-block lg:mt-0 text-black hover:text-white">
-        Logout
+      <a href="/user/logout" class="block mt-4 lg:inline-block lg:mt-0 text-black hover:text-indigo-500">
+        Sign out
       </a>
       {{else}}
-       <a href="/user/login" class="block mt-4 lg:inline-block lg:mt-0 text-black hover:text-white">
-        Login
+       <a href="/user/login" class="block mt-4 lg:inline-block lg:mt-0 text-black hover:text-indigo-500">
+        Sign in
       </a>
       {{/if}}
 
