--- a/app/pages/user/login.hbs
+++ b/app/pages/user/login.hbs
@@ -7,7 +7,7 @@
 </form> -->
 <div class="w-screen h-screen flex justify-center items-center bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500">
     <div class="px-8 py-6 mt-4 text-left bg-white shadow-lg">
-        <h3 class="text-2xl font-bold text-center">Sign Up</h3>
+        <h3 class="text-2xl font-bold text-center">Sign In</h3>
         <form action="/user/login" method="post">
             <div class="mt-4">
               <div>
