--- a/app/pages/user/signup.hbs
+++ b/app/pages/user/signup.hbs
@@ -14,7 +14,7 @@
                     <input type="password" name="password" placeholder="Password" required>
                 </div>
                 <div class="flex items-baseline justify-between">
-                    <button class="px-6 py-2 mt-4 text-white bg-blue-600 rounded-lg hover:bg-blue-900">Login</button>
+                    <button class="px-6 py-2 mt-4 text-white bg-blue-600 rounded-lg hover:bg-blue-900">Sign up</button>
 
                 </div>
             </div>
