--- a/app/pages/about.hbs
+++ b/app/pages/about.hbs
@@ -7,11 +7,11 @@
 </div>
 <div  class="block p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Quoc Le</h5>
-    <a  href="#" class="font-normal text-gray-700 dark:text-gray-400">GitHub</a>
+    <a  href="https://github.com/quoctle00" class="font-normal text-gray-700 dark:text-gray-400">GitHub</a>
 </div>
 <div  class="block p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Rodrigo Onate Garcia</h5>
-    <a  href="https://github.com/quoctle00" class="font-normal text-gray-700 dark:text-gray-400">GitHub</a>
+    <a  href="https://github.com/ronategarcia/" class="font-normal text-gray-700 dark:text-gray-400">GitHub</a>
 </div>
 <div  class="block p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Zhiqiang Liu</h5>
